Add remote for cmsis_6 project
Signed-off-by: Brandon Hurst <brandon.hurst@analog.com>

--- a/west.yml
+++ b/west.yml
@@ -10,6 +10,7 @@ manifest:
 
   projects:
     - name: cmsis_6
+      remote: mainline
       repo-path: CMSIS_6
       revision: main
       path: modules/hal/cmsis_6
